--- a/package.json
+++ b/package.json
@@ -5,17 +5,32 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/app.js"
+    "start": "ts-node server/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/better-sqlite3": "^7.6.4",
+    "@types/jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.0",
     "better-sqlite3": "^7.4.4",
+    "jsonwebtoken": "^9.0.0",
+    "knex": "^2.4.2",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-router": "^10.1.1",
     "koa2-cors": "^2.0.6",
-    "node-stream-zip": "^1.15.0"
+    "node-stream-zip": "^1.15.0",
+    "sqlite3": "^5.1.6",
+    "typescript": "^5.1.3"
+  },
+  "devDependencies": {
+    "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa-logger": "^3.1.2",
+    "@types/koa-router": "^7.4.4",
+    "@types/koa2-cors": "^2.0.2",
+    "ts-node": "^10.9.1"
   }
 }
