--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,14 @@ web_modules/
 
 # TypeScript cache
 *.tsbuildinfo
+dist/
 
 # Optional npm cache directory
 .npm
 
 #Test data
 testZip.zip
+database.db
 
 #VSCode
 .vscode
