--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "db:migrations": "npx knex migrate:latest",
+    "start-server": "npm run db:migrations && node dist/server/app.js",
     "start": "ts-node server/app.ts"
   },
   "author": "",
@@ -13,6 +16,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/better-sqlite3": "^7.6.4",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/koa-ratelimit": "^5.0.0",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^7.4.4",
     "jsonwebtoken": "^9.0.0",
@@ -20,6 +24,7 @@
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
+    "koa-ratelimit": "^5.0.1",
     "koa-router": "^10.1.1",
     "koa2-cors": "^2.0.6",
     "node-stream-zip": "^1.15.0",
