--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/koa-ratelimit": "^5.0.5",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.2.1",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "knex": "^2.4.2",
     "koa": "^2.15.3",
