--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "axios": "^1.4.0",
+    "axios": "^1.10.0",
     "onsenui": "^2.12.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -40,6 +40,13 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "@types/axios": "^0.9.36",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.10",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@types/react-router-dom": "^5.3.3",
+    "prettier": "^2.8.8",
+    "typescript": "^4.9.5"
   }
 }
