--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -8,8 +8,9 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "strictNullChecks": false,
-    "allowJs": true
+    "allowJs": true,
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "../client/node_modules"]
 }
